--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -1,6 +1,7 @@
 .expense-item {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
@@ -9,12 +10,13 @@
 
 .expense-item__description {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  border:2px solid red;
+  flex-direction: row;
   align-items: flex-end;
   flex-flow: column-reverse;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   flex: 1;
+  width: 100%;
 }
 
 .expense-item h2 {
@@ -78,4 +80,15 @@
     font-size: 1.25rem;
     padding: 0.5rem 1.5rem;
   }
+}
+
+.update-button {
+    font: inherit;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: 0px;
+    background-color: #a892ee;
+    color: white;
+    border-radius: 12px;
+    margin-right: 1rem;
 }
